sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:18: error: ')' expected but '}' found.
    }
    ^AlgCocktailSort1:20: error: '<-' expected but ')' found.
    for (i -> n to 0)
                    ^AlgCocktailSort1:28: error: illegal start of simple expression
  }
  ^