sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort()
{
  var n = getNombreValeurs()-2;
  var isEchange = false;
  
  do
  {
		isEchange = false;
    
    for (i <- 0 to n)
    {
      if (plusPetit(i+1, i)
      {
        echange(i, i+1);
        isEchange = true;
      }
    }

    for (i -> n to 0)
    {
      if (plusPetit(i+1, i)
      {
        echange(i, i+1);
        isEchange = true;
      }
    }
  }
  while(isEchange)
}